--- a/pages/test9/20220516/bootstrap.html
+++ b/pages/test9/20220516/bootstrap.html
@@ -200,20 +200,17 @@
 
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-info">
-                        <h3>Squadfree</h3>
-                        <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
+                        <h2><b>JoBins</b></h2>
                         <p>
-                            A108 Adam Street <br>
-                            NY 535022, USA<br><br>
                             <strong>Phone:</strong> +1 5589 55488 55<br>
                             <strong>Email:</strong> info@example.com<br>
                         </p>
                         <div class="social-links mt-3">
-                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <a href="https://corp.jobins.jp/" class="twitter"><i class="bx bxl-twitter"></i></a>
+                            <a href="https://corp.jobins.jp/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                            <a href="https://corp.jobins.jp/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                            <a href="https://corp.jobins.jp/" class="google-plus"><i class="bx bxl-skype"></i></a>
+                            <a href="https://corp.jobins.jp/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -222,10 +219,8 @@
                     <h4>Useful Links</h4>
                     <ul>
                         <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#contact">About us</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
                     </ul>
                 </div>
 
@@ -233,18 +228,15 @@
                     <h4>Our Services</h4>
                     <ul>
                         <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
                     </ul>
                 </div>
 
                 <div class="col-lg-4 col-md-6 footer-newsletter">
                     <h4>Our Newsletter</h4>
-                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
                     <form action="" method="post">
-                        <input type="email" name="email"><input type="submit" value="Subscribe">
+                        <input type="email" name="email" placeholder="e-mail address"><input type="submit" value="Subscribe">
                     </form>
 
                 </div>
@@ -255,7 +247,7 @@
 
     <div class="container">
         <div class="copyright">
-            &copy; Copyright <strong><span>Squadfree</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>JoBins</span></strong> All Rights Reserved
         </div>
         <div class="credits">
             <!-- All the links in the footer should remain intact. -->
