--- a/pages/test9/20220516/bootstrap.html
+++ b/pages/test9/20220516/bootstrap.html
@@ -65,7 +65,8 @@
     <div class="hero-container" data-aos="fade-up">
         <h1>Welcome to our site!</h1>
         <h2>We make businesses the best they can be</h2>
-        <a href="#contact" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
+        <a href="#contact" class="btn-get-started scrollto" data-bs-toggle="tooltip" data-bs-placement="left" title="すくろーる！">
+            <i class="bx bx-chevrons-down"></i></a>
     </div>
 </section><!-- End Hero -->
 
@@ -159,7 +160,7 @@
         <div class="row">
 
             <div class="col-lg-6">
-                <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d105043.51908796684!2d135.46061666574863!3d34.63929535804193!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e71d2942f2d7%3A0x6208c7242f57dea7!2z5qCq5byP5Lya56S-Sm9CaW5z!5e0!3m2!1sja!2sjp!4v1652751058224!5m2!1sja!2sjp" width="100%" height="384" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d140486.89064982085!2d135.32691743281862!3d34.714534730891685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e71d2942f2d7%3A0x6208c7242f57dea7!2z5qCq5byP5Lya56S-Sm9CaW5z!5e0!3m2!1sja!2sjp!4v1652761262004!5m2!1sja!2sjp" width="100%" height="384" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="col-lg-6">
@@ -238,7 +239,8 @@
                     <form action="" method="post">
                         <input type="email" name="email" placeholder="e-mail address"><input type="submit" value="Subscribe">
                     </form>
-
+                    <br><div align="right">
+                    <a href="http://localhost/web_test3/pages/test9/test9.php">Link</a></div>
                 </div>
 
             </div>
