--- a/pages/test9/20220516/bootstrap.html
+++ b/pages/test9/20220516/bootstrap.html
@@ -64,7 +64,7 @@
 <section id="hero">
     <div class="hero-container" data-aos="fade-up">
         <h1>Welcome to our site!</h1>
-        <h2>We make businesses the best they can be</h2>
+        <h2>採用成功にコミットする採用管理ツール JoBins</h2>
         <a href="#contact" class="btn-get-started scrollto" data-bs-toggle="tooltip" data-bs-placement="left" title="すくろーる！">
             <i class="bx bx-chevrons-down"></i></a>
     </div>
@@ -249,7 +249,7 @@
 
     <div class="container">
         <div class="copyright">
-            &copy; Copyright <strong><span>JoBins</span></strong> All Rights Reserved
+            &copy; Copyright <strong><span>JoBins</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
             <!-- All the links in the footer should remain intact. -->
